--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
   publish:
     environment:
       name: pypi
-      url: https://pypi.org/p/openai-agents
+      url: https://pypi.org/p/victor-openai-example
     permissions:
       id-token: write # Important for trusted publishing to PyPI
     runs-on: ubuntu-latest
