--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           enable-cache: true
       - name: Install dependencies
-        run: make sync
+        run: uv sync
       - name: Build package
         run: uv build
       - name: Publish to PyPI
